Fix cursor bar alignment for RTL using logical CSS properties

--- a/src/components/Toolset/CodepointEditor/ProcessedTextDisplay.module.css
+++ b/src/components/Toolset/CodepointEditor/ProcessedTextDisplay.module.css
@@ -132,9 +132,8 @@
 
 .cursorBar {
   position: absolute;
-  left: -2px;
-  top: 0;
-  bottom: 0;
+  inset-block: 0;
+  inset-inline-start: -2px;
   width: 1.5px;
   background-color: black;
   animation: blink 1s step-start infinite;
